feat: implement input validation
- Add input validation using ValidationPatterns enum in Automobile, Owner, and Users
- Ensure consistent validation patterns across all modules

fix: handle non-existent user in login and other bug fixes

- Add check for non-existent user in login functionality
- Return appropriate error message when user is not found
- General bug fixes and code improvements